--- a/main.ipynb
+++ b/main.ipynb
@@ -137,6 +137,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_train_input = train_input.reshape([2000,196])\n",
+    "my_train_classes = train_classes.reshape([2000])\n",
+    "my_test_input = test_input.reshape([2000,196])\n",
+    "my_test_classes = test_classes.reshape([2000])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
