--- a/main.ipynb
+++ b/main.ipynb
@@ -2,77 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data/mnist/MNIST\\raw\\train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "9920512it [00:02, 3332823.37it/s]                                                                                      \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/mnist/MNIST\\raw\\train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data/mnist/MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "32768it [00:00, 112621.46it/s]                                                                                         \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/mnist/MNIST\\raw\\train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data/mnist/MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1654784it [00:00, 1805017.35it/s]                                                                                      \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/mnist/MNIST\\raw\\t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data/mnist/MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "8192it [00:00, 40532.04it/s]                                                                                           \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/mnist/MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n",
-      "Processing...\n",
-      "Done!\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -108,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +77,107 @@
     "my_train_classes = train_classes.reshape([2000])\n",
     "my_test_input = test_input.reshape([2000,196])\n",
     "my_test_classes = test_classes.reshape([2000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.3395 on epoch: 1\n",
+      "Loss: 10.8198 on epoch: 2\n",
+      "Loss: 0.0000 on epoch: 3\n",
+      "Loss: 0.0001 on epoch: 4\n",
+      "Loss: 0.0001 on epoch: 5\n",
+      "Loss: 0.0000 on epoch: 6\n",
+      "Loss: 0.0000 on epoch: 7\n",
+      "Loss: 0.0000 on epoch: 8\n",
+      "Loss: 0.0000 on epoch: 9\n",
+      "Loss: 0.0000 on epoch: 10\n",
+      "Loss: 0.0000 on epoch: 11\n",
+      "Loss: 0.0000 on epoch: 12\n",
+      "Loss: 0.0000 on epoch: 13\n",
+      "Loss: 0.0000 on epoch: 14\n",
+      "Loss: 0.0000 on epoch: 15\n",
+      "Accuracy: 91.55 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# device\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "# number of epoch\n",
+    "num_epochs = 15\n",
+    "# batch size to compute mini-batch\n",
+    "batch_size = 5\n",
+    "# number of pixels in the image \n",
+    "input_size = 196\n",
+    "# number of possible digit: 0 to 9 \n",
+    "num_class = 10\n",
+    "# small step to find a minima\n",
+    "learning_rate = 0.001\n",
+    "# hidden size\n",
+    "hidden_size = 2000\n",
+    "\n",
+    "# Fully connected neural network with one hidden layer\n",
+    "class NeuralNet(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_class):\n",
+    "        super(NeuralNet, self).__init__()\n",
+    "        self.layer1 = nn.Linear(input_size, hidden_size) \n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.layer2 = nn.Linear(hidden_size, num_class)  \n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        outputs = self.layer1(x)\n",
+    "        outputs = self.relu(outputs)\n",
+    "        outputs = self.layer2(outputs)\n",
+    "        return outputs\n",
+    "\n",
+    "# creating neural net\n",
+    "model = NeuralNet(input_size, hidden_size, num_class).to(device)\n",
+    "\n",
+    "# CrossEntropyLoss and optimizer which minimize loss with learning rate step\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)  \n",
+    "\n",
+    "# train function\n",
+    "for epoch in range(num_epochs):\n",
+    "    for i in range(int(len(my_train_input)/batch_size)):  \n",
+    "        # Move tensors to the configured device\n",
+    "        images = my_train_input.narrow(0,i*batch_size,batch_size).to(device)\n",
+    "        labels = my_train_classes.narrow(0,i*batch_size,batch_size).to(device)\n",
+    "        \n",
+    "        # Forward pass\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        \n",
+    "        # Backward and optimize\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "    print ('Loss: {:.4f} on epoch: {}'.format(loss.item(),epoch+1))\n",
+    "\n",
+    "# test function\n",
+    "total = 0\n",
+    "well_predicted_count = 0\n",
+    "for i in range(int(len(my_test_input)/batch_size)):\n",
+    "\n",
+    "    images = my_test_input.narrow(0,i*batch_size,batch_size).to(device)\n",
+    "    labels = my_test_classes.narrow(0,i*batch_size,batch_size).to(device)\n",
+    "    total += labels.size(0)\n",
+    "\n",
+    "    outputs = model(images)\n",
+    "    _, predictions = torch.max(outputs.data, 1)\n",
+    "\n",
+    "    well_predicted_count += (predictions == labels).sum().item()\n",
+    "\n",
+    "print('Accuracy: {} %'.format(100 * well_predicted_count / total))\n"
    ]
   },
   {
