--- a/Convolutional_nn_97.7%.ipynb
+++ b/Convolutional_nn_97.7%.ipynb
@@ -2,6 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_error_BOI = []\n",
+    "        test_error_BOR = []\n",
+    "        for i in range(10):\n",
+    "            #test_error_BOI[i], test_error_BOR[i] = test_accuracy(model_, test_input_1_10[i,:,:], test_input_2_10[i,:,:], test_target_10[i,:])\n",
+    "            test_error_BOI.append(test_accuracy_based_on_imgs(model_, test_input_1_10[i,:,:], test_input_2_10[i,:,:], test_target_10[i,:]))\n",
+    "            test_error_BOR.append(test_accuracy_based_on_result(model_, test_input_1_10[i,:,:], test_input_2_10[i,:,:], test_target_10[i,:]))\n",
+    "        \n",
+    "        # getting the test error as the mean of the 10 we got\n",
+    "        test_error_based_on_imgs.append(sum(test_error_BOI) / len(test_error_BOI))\n",
+    "        test_error_based_on_result.append(sum(test_error_BOR) / len(test_error_BOR))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -38,7 +63,7 @@
     "test_input_10 = torch.Tensor(10, 2*size, 14*14)\n",
     "test_target_10 = torch.Tensor(10, size)\n",
     "test_classes_10 = torch.Tensor(10, 2*size)\n",
-    "for i in range(1,10):\n",
+    "for i in range(10):\n",
     "    train_input, train_target, train_classes, test_input, test_target, test_classes = \\\n",
     "    dlc_practical_prologue.generate_pair_sets(size)\n",
     "    test_input, test_target, test_classes = Variable(test_input), Variable(test_target), Variable(test_classes)\n",
@@ -204,7 +229,7 @@
     "        train_error.append(test_accuracy(model_, my_train_input_, my_train_classes_))\n",
     "        test_ = []\n",
     "        # getting test errors on 10 different samples\n",
-    "        for i in range(1,10):\n",
+    "        for i in range(10):\n",
     "            test_.append(test_accuracy(model_, test_input_10[i,:,:], test_classes_10[i,:]))\n",
     "        # getting the test error as the mean of the 10 we got\n",
     "        test_error.append(sum(test_) / len(test_))\n",
